# gpt-bot

./: .dockerignore  .env.example  .gitignore  API_BRIEF.md  CLAUDE.md  Dockerfile  LOCAL_SETUP.md  README.md  api_server.py  app_config.py  config.example.json  daemon_manager.py  docker-compose.yml  job_queue.py  main.py  pyproject.toml  scheduled_redeem.py  schemas.py  telegram_service.py  workflow_service.py
.github/workflows/: docker-publish.yml
.trae/documents/: 激活与进度流程重对齐计划.md
tests/: manual_poll_activate.py  sub2api-account-20260418223743.json  test_api_server.py  test_workflow_service.py
