[project]
name = "gpt-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "docopt==0.6.2",
    "idna==3.11",
    "pipreqs==0.4.13",
    "pyaes==1.6.1",
    "pysocks==1.7.1",
    "python-socks==2.8.1",
    "pyasn1==0.6.3",
    "requests==2.33.0",
    "rsa==4.9.1",
    "telethon==1.42.0",
    "urllib3==2.6.3",
    "uv==0.11.1",
    "yarg==0.1.10",
    "fastapi==0.135.2",
    "uvicorn==0.42.0",
]
